solc_mutator_ossfuzz_seed_corpus/test_sol/test_a48e439d11e50992fb59354e465fe66e4cd88afaddc6ce2c3afae6c058279f73_9a51772a5b7d49412b9ee8cb7da13cef15bfcadd_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  function f0(bytes21 i0,uint72 i1) external returns(address o0,uint144 o1)
  {


{

  o1 *= (15408583262019619435740986160870224046737203 << (9446399469436090356726505773395400770737303 + 787009378934018036696663287993629811326474));
  {
  }
}
  }
}
function f1()  returns(C0 o0,bytes memory o1,address o2,bytes7 o3)
{
}

==== Source: su1.sol ====
// ----
// TypeError 2271: (su0.sol:116-254): Operator << not compatible with types int_const 1540...(36 digits omitted)...7203 and int_const 1023...(36 digits omitted)...3777
